# video-flow

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_en.md  README_zh.md  TODO_LIST.md  config.toml  pyproject.toml
.claude/skills/videoflow/: SKILL.md  generate.md  resume.md  review.md
docs/: PRD_zh.md
examples/stock-myths/: input.md
mcp_servers/align/: README.md  pyproject.toml
mcp_servers/align/src/videoflow_align/: __init__.py  __main__.py  ass_writer.py  engine.py
mcp_servers/align/tests/: conftest.py
mcp_servers/align/tests/integration/: test_mcp_integration.py
mcp_servers/align/tests/unit/: test_ass_writer.py  test_engine.py
mcp_servers/playwright/: README.md  pyproject.toml
mcp_servers/playwright/src/videoflow_playwright/: __init__.py  __main__.py  recorder.py
mcp_servers/playwright/tests/: conftest.py
mcp_servers/playwright/tests/integration/: test_playwright_mcp.py
mcp_servers/playwright/tests/unit/: test_recorder.py
mcp_servers/remotion/: README.md  package.json  tsconfig.json
mcp_servers/remotion/src/: remotion.config.ts  server.tsx
mcp_servers/remotion/src/compositions/: Chart.tsx  Diagram.tsx  Image.tsx  ScreenCapture.tsx  StockFootage.tsx  TitleCard.tsx  index.ts
mcp_servers/remotion/src/lib/: render.ts
mcp_servers/remotion/src/types/: index.ts
src/videoflow/: __init__.py  cache.py  cli.py  config.py  ffmpeg_wrapper.py  mcp_align_client.py  mermaid.py  models.py  parser.py  pipeline.py  renderer.py  shot_planner.py  state.py  subtitles.py  templates.py  tts.py
src/videoflow/providers/: __init__.py  llm_parser.py
templates/: custom_example.json
tests/: conftest.py  test_cache.py  test_cli_state.py  test_config.py  test_ffmpeg_wrapper.py  test_integration.py  test_models.py  test_parser.py  test_pipeline_concurrency.py  test_renderer.py  test_state.py  test_subtitles.py  test_timings.py  test_tts.py  test_tts_cache.py
ui/: app.py  streamlit_config.toml
ui/pages/: 01_project_detail.py  02_shot_editor.py  03_preview.py  04_reviews.py
