[project]
name = "videoflow"
version = "0.1.0.dev0"
description = "Text-to-video pipeline — minimum viable demo based on the Videoflow PRD."
readme = "README_en.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Videoflow Contributors" }]
keywords = ["video", "tts", "ffmpeg", "ai", "short-video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pydantic>=2.5",
    "edge-tts>=6.1",
    "typer>=0.12",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
video-agent = "videoflow.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: end-to-end test requiring FFmpeg and network (use --run-integration)",
]
